Implemented html2Canvas
Added basic implementation of html to PNG conversion using html2canvas.

--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GENOME</title>
+    <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 </head>
+
 <body>
-    
+
+    <div id="pfp">
+        <h1>Hello, World!</h1>
+        <p>This is a sample div content.</p>
+    </div>
+
+    <button onclick="convertToPNG()">Convert to PNG</button>
+
+    <script src="./js/pfpGenerator.js"></script>
+
 </body>
+
 </html>
