Added Random pfp
Random profile picture is generated using html2canvas

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 
 <body>
 
-    <div id="pfp">
-        <h1>Hello, World!</h1>
-        <p>This is a sample div content.</p>
-    </div>
+    <canvas id="patternCanvas" width="400" height="400"></canvas>
 
     <button onclick="convertToPNG()">Convert to PNG</button>
 
