--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
       Your browser does not support the HTML canvas tag.
     </canvas>
     <div id="button-container">
-      <input type="color" id="headColorPicker" value="#ff0000"> Head Color
-      <input type="color" id="bodyColorPicker" value="#0000ff"> Body Color
+      <input type="color" id="headColorPicker" value="#818181"> Head Color
+      <input type="color" id="bodyColorPicker" value="#030303"> Body Color
+      <input type="color" id="bgColorPicker" value="#99ddff"> Background Color
       <button onclick="toggleBackground()">Toggle Background</button><!--bg toggle-->
       <button onclick="downloadCanvas()">Download</button> <!--download-->
-      <button onclick="drawCanvas()">Generate</button>
     </div>
     <script src="js/pfpGenerator.js"></script>
   </div>
